c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_return_type_funcall.c
struct s;

struct s f(void);

int main(void) {
  f(); // can't call a function with an incomplete return type (besides void)
  return 0;
}